# Leaf

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  tekst
include/: body.h  const.h  entity.h  game.h  geometry.h  helpers.h  input.h  io.h  leaf_math.h  loader.h  math.h  mmath.h  physics.h  renderer.h  state.h  types.h  world.h
include/examples/: example.h  slider.h  stacking.h  thumbler.h
include/glad/: glad.h
include/rigid_body/: body.h  geometry.h
libs/glad/: CMakeLists.txt  glad.c
libs/glad/include/glad/: glad.h
libs/glfw/: cmake_uninstall.cmake
libs/glfw/src/: glfw3.lib  glfw3.pc
src/: body.cpp  const.cpp  game.cpp  geometry.cpp  glad.c  helpers.cpp  input.cpp  io.cpp  leaf_math.cpp  loader.cpp  main.cpp  math.cpp  mmath.cpp  physics.cpp  renderer.cpp  world.cpp
src/examples/: example.cpp  slider.cpp  stacking.cpp  thumbler.cpp
src/rigid_body/: body.cpp  geometry.cpp
src/shaders/: simple.frag  simple.vert
